--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ body {
 }
 
 button {
-  margin-top: 40px;
+  margin-top: 20px;
   background-color: white;
   color: #333;
   padding: 15px 40px;
@@ -106,7 +106,6 @@ button:hover {
 .cards {
   padding: 20px;
   display: flex;
-  justify-content: space-evenly;
 }
 
 .card-body {
@@ -116,6 +115,7 @@ button:hover {
 
 .card {
   width: 600px;
+  margin: 20px;
   border: 1px solid #e4dede;
 }
 .card a {
@@ -131,4 +131,47 @@ button:hover {
 .card-link {
   text-align: center;
   margin-bottom: 20px;
+}
+
+.rocket-section {
+  margin: 100px 20px;
+}
+.rocket {
+  margin: 20px;
+  display: flex;
+}
+
+.rocket-details {
+  margin: 80px 20px;
+  position: relative;
+}
+
+.rocket-desc {
+  width: 400px;
+  height: auto;
+  background-color: #494550;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cg fill='%23201f21' fill-opacity='0.4'%3E%3Cpolygon fill-rule='evenodd' points='8 4 12 6 8 8 6 12 4 8 0 6 4 4 6 0 8 4'/%3E%3C/g%3E%3C/svg%3E");
+  color: white;
+  position: absolute;
+  text-align: center;
+  padding: 20px;
+}
+
+.right {
+  right: 80px;
+  bottom: 0;
+}
+
+.left {
+  left: 80px;
+  bottom: 0;
+}
+
+.rocket-desc #h1 {
+  font-size: 2rem;
+  font-weight: 900;
+}
+.rocket-desc #h2 {
+  font-size: 1.5rem;
+  font-weight: 600;
 }
